# model-judging

./: .gitignore  README.md  examples.py  pyproject.toml  run_benchmark.py
src/model_judging/: __init__.py  assess.py  client.py  complexity.py  copilot_client.py  dataset.py  estimate.py  executors.py  harness.py  judges.py  mock.py  pairwise.py  pipeline.py  progress.py  registry.py  report.py  scoring.py  sessions.py  types.py
src/model_judging/data/: prompts.json
tests/: test_benchmark.py  test_complexity.py  test_executors.py  test_pipeline.py
